--- a/app/templates/story.template.html
+++ b/app/templates/story.template.html
@@ -1,6 +1,8 @@
-<div class="talk-bubble bubble">
-    <div class="talktext">
-        <p class="text"></p>
-        <i class="material-icons click button-glow" ng-click="$ctrl.nextPage();">forward</i>
+<section class="story-background">
+    <div class="talk-bubble bubble">
+        <div class="talktext">
+            <p class="text"></p>
+            <i class="material-icons click button-glow" ng-click="$ctrl.nextPage();">forward</i>
+        </div>
     </div>
-</div>
+</section>
