--- a/app/css/prepper-stats.css
+++ b/app/css/prepper-stats.css
@@ -4,103 +4,106 @@
     outline: 0;
     box-sizing: border-box;
 }
-
-body {
-    background-image: url("../img/night_mobile.jpg");
+.prepper-body {
+    background-image: url("../img/layers-end/l1_sky-mobile.png"); 
+    background-repeat: repeat-x;    
+    background-size: auto 100%;
+    height: 100vh;
+    
 }
 
 form {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    
+    padding: 3px 20px;      
+ }
+.form-group {
+    margin-bottom: 8px;
 }
-
-label {
-    display: block;
-    margin-top: 10px;
-    /* margin: 20px 0; */
-}
+ label {
+     display: flex;
+     justify-content: flex-start;
+ }
 
 .radio_item{
     display: none !important;
 }
 
-.label_item {
-    opacity: 0.25;
-    cursor: pointer;
-}
-
 .radio_item:checked + .label_item {
     opacity: 1;
 }
-
-.logo {
-    width: 65px;
-    margin: 0 auto;
+.male_female {    
+    display: flex;
+    justify-content: space-around;    
 }
 
-.logo_header {
-    margin-right: 2rem;
+.female-idol {
+    background: url(../img/sprites/female_sprite_idol_w_128_per_sprite.png);
+    width: 128px;
+    height: 128px;
+    animation: female 2.0s steps(16) infinite;
 }
 
-.name_input {
-    width: 65%;
-    text-align: center;
+.male-idol {
+    background: url(../img/sprites/sprite_boy_idol_w125.png);
+    width: 125px;
+    height: 125px;
+    animation: male 2.0s steps(8) infinite;
 }
 
-input {
+@keyframes female {
+    100% { background-position: -2048px; }
+ }
+ @keyframes male {
+    100% { background-position: -1000px; }
+ }
+
+ .label_item {
+    opacity: 0.25;
+    cursor: pointer;
+}
+/* input {
     margin-top: 10px;
     padding: .25rem;
     text-align: center;
+    width: 65%;
+} */
+
+/* .left-align {
+    display: flex;
+    justify-content: space-between; 
 }
 
-.male_female {
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-}
+
+label {
+    display: inline;    
+} */
 
 .go_button {
-    width: 50%;
-    padding: 1rem;
+    width: 100%;
+    padding: .25rem;
 }
 
-.male_img {
-    width: 75px;
-    height: 75px;
-}
 
-.female_img {
-    width: 70px;
-    height: 75px;
-}
-
-/* For Tablet */
-@media only screen and (min-width: 600px) {
-
-    body {
-        background-image: url("../img/night_full.jpg");
+/************************************************************** For Tablet */
+@media only screen and (min-width: 600px){
+    .prepper_form {
+        width: 50%;
+        margin: 0 auto;
     }
-
-    form {
-        font-size: 25px;        
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
+    .stat_header {
+        font-size: 3rem;
+        padding: 20px;
     }
-
     .male_female {
-        width: 25%;
-        justify-content: space-around;
+        display: flex;
+        justify-content: space-evenly;
     }
-}
+    
+  }
+  
+  
+  /*********************************************************** For Desktop */
+  @media only screen and (min-width: 1000px){
+  
+  }
+     
