--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -34,15 +34,35 @@ ng-view {
     animation: glow 3s infinite;
 }
 
-/*buttons*/
-
-
-
-/* User stats*/
-
-.num_input{ 
-  width: 75px;  
+.glow {
+  filter: drop-shadow( 0 0 0 2px white);
+  animation: glow 3s infinite;
+   /* Use -webkit- only if supporting: Chrome < 54, iOS < 9.3, Android < 4.4.4 */
 }
+
+
+@keyframes glow {
+    0% {
+      filter: drop-shadow( 0px 0px 5px white );
+      /* text-shadow:  0 0 white; */
+    }
+    
+    15% {
+      filter: drop-shadow( 0px 0px 8px rgb(222, 240, 63) );
+      /* text-shadow: 2px 2px rgb(222, 240, 63),
+                   -2px -2px rgb(222, 240, 63); */
+    }
+    30% {
+      filter: drop-shadow( 0px 0px 2px rgba(234, 236, 99, 0.7) );
+      /* text-shadow: 2px 2px rgba(234, 236, 99, 0.7),
+                   -2px -2px rgba(234, 236, 99, 0.7); */
+    }
+    50% {
+      filter: drop-shadow( 0px 0px 7px rgba(234, 236, 115, 0.5) );
+      /* text-shadow: 20px 20px rgba(234, 236, 115, 0.5),
+                   -20px -20px rgba(234, 236, 115, 0.5); */
+    }
+  }
 
 /*About Popup*/
 .popup {
@@ -90,35 +110,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
-.glow {
-  filter: drop-shadow( 0 0 0 2px white);
-  animation: glow 3s infinite;
-   /* Use -webkit- only if supporting: Chrome < 54, iOS < 9.3, Android < 4.4.4 */
-}
 
-
-@keyframes glow {
-    0% {
-      filter: drop-shadow( 0px 0px 5px white );
-      /* text-shadow:  0 0 white; */
-    }
-    
-    15% {
-      filter: drop-shadow( 0px 0px 8px rgb(222, 240, 63) );
-      /* text-shadow: 2px 2px rgb(222, 240, 63),
-                   -2px -2px rgb(222, 240, 63); */
-    }
-    30% {
-      filter: drop-shadow( 0px 0px 2px rgba(234, 236, 99, 0.7) );
-      /* text-shadow: 2px 2px rgba(234, 236, 99, 0.7),
-                   -2px -2px rgba(234, 236, 99, 0.7); */
-    }
-    50% {
-      filter: drop-shadow( 0px 0px 7px rgba(234, 236, 115, 0.5) );
-      /* text-shadow: 20px 20px rgba(234, 236, 115, 0.5),
-                   -20px -20px rgba(234, 236, 115, 0.5); */
-    }
-  }
 /******* Running Timer *******/
 /* .running-timer {
   background : url(../img/running_man8.png);  
@@ -144,3 +136,16 @@ from { background-position: 0px; }
   to { transform: translateX(100%); }  
 }
 
+ /************************************************************** For Tablet */
+ @media only screen and (min-width: 600px){
+
+  .hidden-for-large {
+    display: none;
+  }
+}
+
+
+/*********************************************************** For Desktop */
+@media only screen and (min-width: 1000px){
+
+}
