--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -1,44 +1,77 @@
 <nav-component></nav-component>
 
-<form class="prepper_form" ng-submit="$ctrl.calsPerDay();">
+<section class="prepper-body">
+    <form class="prepper_form" ng-submit="$ctrl.calsPerDay();">
 
-    <!-- <img class="logo" src="logo.png" alt=""> -->
+        <!-- <img class="logo" src="logo.png" alt=""> -->
 
-    <h1 class="stat_header">Enter your stats</h1>
-    
-    <div class="name">
-        <label>Name</label>
-        <input class="name_input" ng-model="$ctrl.user.username" placeholder="Enter your name">
-    </div>
-    <div class="age">
-        <label>Age:</label>
-        <input ng-model="$ctrl.user.age" type="number" min="0" max="99" ng-init="$ctrl.user.age=23;" ng-change="$ctrl.calsPerDay();" placeholder="36">
-    </div>
+        <h5 class="stat_header">Enter in your character stats</h5>
 
-    <div class="height">
-        <label>Height in Inches:</label>
-        <input ng-model="$ctrl.user.height" type="number" min="0" max="300" ng-init="$ctrl.user.height=70;" ng-change="$ctrl.calsPerDay();" placeholder="70">
-    </div>
-    
-    <div class="male_female">
-        <div class="male">
-            <input ng-model="$ctrl.user.sex" ng-init="$ctrl.user.sex='male';" type="radio" class="radio_item" value="male" name="item" id="radio1" ng-change="$ctrl.calsPerDay();">
-            <label class="label_item" for="radio1"> <img class="male_img" src="../img/male.jpg"> </label>
-        </div>
-        <div class="female">
-            <input ng-model="$ctrl.user.sex" type="radio" class="radio_item" value="female" name="item" id="radio2" ng-change="$ctrl.calsPerDay();">
-            <label class="label_item" for="radio2"> <img class="female_img" src="../img/female.jpg"> </label>
-        </div>
+        <div class="male_female">
+
+            <div class="male">
+                <input ng-model="$ctrl.user.sex" ng-init="$ctrl.user.sex='male';" type="radio" class="radio_item" value="male" name="item"
+                    id="radio1" ng-change="$ctrl.calsPerDay();">
+                <label class="label_item" for="radio1">
+                    <!-- <img class="male_img" src="../img/Idle_male.png">--> 
+                    <div class="male-idol"></div></label> 
+            </div>
+
+            <div class="female">
+                <input ng-model="$ctrl.user.sex" type="radio" class="radio_item" value="female" name="item" id="radio2" ng-change="$ctrl.calsPerDay();">
+                <label class="label_item" for="radio2">
+                    <!-- <img class="female_img" src="../img/Idle_female.png">-->
+                    <div class="female-idol"></div> </label> 
+            </div>
         </div>
 
-    <div class="weight">
-        <label>Weight:</label>
-        <input ng-model="$ctrl.user.weight" type="number" min="0" max="500" ng-init="$ctrl.user.weight=200;" ng-change="$ctrl.calsPerDay();" placeholder="200">
-    </div>
-    
-    <label class="cal_info">
-        You need {{ $ctrl.user.result }} calories per day.
-    </label>
-    
-    <button class="go_button" ng-click="$ctrl.nextPage($ctrl.user); $ctrl.calsPerDay();">Go!</button>
-</form>
+        <!--With bootstrap-->
+        <div class="form-group">
+            <label for="">Name</label>
+            <input type="text" class="form-control" ng-model="$ctrl.user.username" placeholder="Enter your name">
+        </div>
+        <div class="form-group">
+            <label for="">Age</label>
+            <input class="form-control" ng-model="$ctrl.user.age" type="number" min="0" max="99" ng-init="$ctrl.user.age=23;" ng-change="$ctrl.calsPerDay();"
+                placeholder="36">
+        </div>
+        <div class="form-group">
+            <label for="">Height in Inches</label>
+            <input class="form-control" ng-model="$ctrl.user.height" type="number" min="0" max="300" ng-init="$ctrl.user.height=70;"
+                ng-change="$ctrl.calsPerDay();" placeholder="70">
+        </div>
+        <div class="form-group">
+            <label for="">Weight</label>
+            <input class="form-control" ng-model="$ctrl.user.weight" type="number" min="0" max="500" ng-init="$ctrl.user.weight=200;"
+                ng-change="$ctrl.calsPerDay();" placeholder="200">
+        </div>
+
+        <!-- <div class="name left-align">
+            <label>Name</label>
+            <input class="name_input" ng-model="$ctrl.user.username" placeholder="Enter your name">
+        </div>
+        <div class="age left-align">
+            <label>Age:</label>
+            <input ng-model="$ctrl.user.age" type="number" min="0" max="99" ng-init="$ctrl.user.age=23;" ng-change="$ctrl.calsPerDay();"
+                placeholder="36">
+        </div>
+
+        <div class="height left-align">
+            <label>Height Inch:</label>
+            <input ng-model="$ctrl.user.height" type="number" min="0" max="300" ng-init="$ctrl.user.height=70;" ng-change="$ctrl.calsPerDay();"
+                placeholder="70">
+        </div>
+
+        <div class="weight left-align">
+            <label>Weight:</label>
+            <input ng-model="$ctrl.user.weight" type="number" min="0" max="500" ng-init="$ctrl.user.weight=200;" ng-change="$ctrl.calsPerDay();"
+                placeholder="200">
+        </div> -->
+
+        <label class="cal_info">
+            You need {{ $ctrl.user.result }} calories per day.
+        </label>
+
+        <button class="go_button btn btn-secondary" ng-click="$ctrl.nextPage($ctrl.user); $ctrl.calsPerDay();">Let's Go!</button>
+    </form>
+</section>
