Added animations, working on timer

--- a/app/templates/landing-page.template.html
+++ b/app/templates/landing-page.template.html
@@ -1,11 +1,9 @@
-    <header class="landing_page_logo">
+    <section class="landing_page_logo">
         <img class="main_logo glow secondary-glow" src="../img/Other_Big_Full_Logo.png" alt="">
-    </header>
-
-    <div class="landing_button_container">
         <button class="landing_buttons" type="button" ng-click="$ctrl.aboutGame();">About</button>
         <button class="landing_buttons" type="button" ng-click="$ctrl.nextPage();">Play</button>
-    </div>
+    </section>
+
 
 
     <section class="popup" ng-show="$ctrl.popup">
