--- a/app/templates/locations.template.html
+++ b/app/templates/locations.template.html
@@ -2,7 +2,7 @@
 
 <section class="locations-body">
     <div class="main">
-        <div class="man_box" style="{{$ctrl.timerAnimation}}">
+        <div class="{{$ctrl.userClass}}" style="{{$ctrl.timerAnimation}}">
             <div class="man"></div>
         </div>
     </div>
