--- a/app/css/landing-page.css
+++ b/app/css/landing-page.css
@@ -29,13 +29,12 @@
     margin-top: 9%;
 }
 
-/* End About Pop Up */
-
-.landing_button_container {
+.landing_page_logo {
+  height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  height: 50vh;
 }
 
 .landing_buttons {
