--- a/app/css/locations.css
+++ b/app/css/locations.css
@@ -34,10 +34,12 @@ nav {
     color: white;
     border-bottom: #777777 1px solid;
 }
+
 .available-items-flex {
     display: flex;
     flex-wrap: wrap;
-    }
+    justify-content: center;
+}
     
 
 .available-items {
@@ -48,6 +50,14 @@ nav {
     border: #777777 1px solid;
     border-radius: 5px;
     margin: 5px;
+}
+
+#countdowntimer {
+    position: absolute;
+    top: 50px;
+    right: 50%;
+    transform: translateX(50%);
+    font-size: 40px;
 }
 
 .margin5 {
@@ -108,6 +118,39 @@ nav {
     border-radius: 100%;
     border: 2px solid yellow;
 }
+
+.male {
+    background: url("../img/sprites/male_run.png");
+    width: 120px;
+    height: 120px;
+    animation: walk-east-male .5s steps(10) infinite;
+    /* position: fixed; */
+  }
+  
+.female {
+    background: url("../img/sprites/female_run.png");
+    width: 128px;
+    height: 128px;
+    animation: walk-east-female .5s steps(10) infinite;
+    /* position: fixed; */
+}
+  
+
+/* animation: walk-east 1s steps(8) infinite,
+              forward 10s linear infinite; */
+
+  @keyframes walk-east-male {
+  100% { background-position: -1200px; }
+  }
+  
+  @keyframes walk-east-female {
+    100% { background-position: -1280px; }
+  }
+  
+  @keyframes forward {
+    from { transform: translateX(0%); }  
+    to { transform: translateX(100%); }  
+  }
 /***************************************************************** Media Queries ***************/
 
 @media only screen and (min-width: 600px) {
@@ -126,7 +169,6 @@ nav {
     }
     .story {
         display: inline;
-        width: 40%;
         border-right: #777777 1px solid;
         border-left: #777777 1px solid;
         background-color: #555555;
