--- a/app/css/prepper-stats.css
+++ b/app/css/prepper-stats.css
@@ -8,10 +8,17 @@
     background-image: url("../img/layers-end/l1_sky-mobile.png"); 
     background-repeat: repeat-x;    
     background-size: auto 100%;
+    height: 90%;
+}
+
+.prepper_form {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 form {
-    
     padding: 3px 20px;      
  }
 .form-group {
@@ -34,25 +41,25 @@ form {
     justify-content: space-around;    
 }
 
-.female-idol {
-    background: url(../img/sprites/female_sprite_idol_w_128_per_sprite.png);
+.female-idle {
+    background: url("../img/sprites/female_idle.png");
     width: 128px;
     height: 128px;
-    animation: female 2.0s steps(16) infinite;
+    animation: female .5s steps(16) infinite;
 }
 
-.male-idol {
-    background: url(../img/sprites/sprite_boy_idol_w125.png);
-    width: 125px;
-    height: 125px;
-    animation: male 2.0s steps(8) infinite;
+.male-idle {
+    background: url("../img/sprites/male_idle.png");
+    width: 120px;
+    height: 120px;
+    animation: male .5s steps(12) infinite;
 }
 
 @keyframes female {
     100% { background-position: -2048px; }
  }
  @keyframes male {
-    100% { background-position: -1000px; }
+    100% { background-position: -1440px; }
  }
 
  .label_item {
