--- a/app/templates/locations.template.html
+++ b/app/templates/locations.template.html
@@ -2,8 +2,9 @@
 
 <section class="locations-body">
     <div class="main">
+        <span id="countdowntimer"></span>
         <div class="{{$ctrl.userClass}}" style="{{$ctrl.timerAnimation}}">
-            <div class="man"></div>
+            <!-- <div class="man"></div> -->
         </div>
     </div>
 
