--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -8,7 +8,7 @@
         <div class="male_female">
 
             <div id="male">
-                <input ng-model="$ctrl.user.sex" ng-init="$ctrl.user.sex='male';" type="radio" class="radio_item" value="male" name="item"
+                <input ng-model="$ctrl.user.sex" type="radio" class="radio_item" value="male" name="item"
                     id="radio1" ng-change="$ctrl.calsPerDay();">
                 <label class="label_item" for="radio1">                    
                     <div class="male-idle"></div>
