--- a/app/css/end.css
+++ b/app/css/end.css
@@ -41,6 +41,9 @@ height: 45px;
 border-radius: 50%;
 }
 
+.final-numbers {
+  color: black;
+}
 
     /************************************************************** For Tablet */
 @media only screen and (min-width: 600px){
