--- a/app/css/locations.css
+++ b/app/css/locations.css
@@ -12,11 +12,18 @@ nav {
     height: 100vh;
     background-color: #555555;
 }
+
 .main {
     background: url("/img/street02_preview_mobile.png");
     background-repeat: repeat-x;
     height: 30vh;
     background-size: auto 100%;
+    position: relative;
+}
+
+.positioning {
+    position: absolute;
+    bottom: 5%;
 }
 
 .story {
@@ -27,6 +34,7 @@ nav {
     min-height: 30vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;    
@@ -39,6 +47,7 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
 }
     
 
@@ -149,7 +158,12 @@ nav {
   
   @keyframes forward {
     from { transform: translateX(0%); }  
-    to { transform: translateX(200%); }  
+    to { transform: translateX(400%); }
+  }
+
+  @keyframes scroll-city {
+    0% { background-position: 0 0 }
+    100% { background-position: 100% 0 }
   }
 /***************************************************************** Media Queries ***************/
 
@@ -160,7 +174,7 @@ nav {
         background-repeat: repeat-x;
         height: 50vh;
         width: 100%;
-        animation: animatedBackground 60s linear infinite;
+        animation: scroll-city 60s linear infinite;
         animation-direction: reverse;
     }
     .footer-content {
