--- a/app/templates/locations.template.html
+++ b/app/templates/locations.template.html
@@ -1,9 +1,9 @@
-<nav-component timeout="$ctrl.pageTimeout"></nav-component>
+<nav-component></nav-component>
 
 <section class="locations-body">
     <div class="main">
-        <span id="countdowntimer"></span>
-        <div class="{{$ctrl.userClass}}" style="{{$ctrl.timerAnimation}}">
+        <span class="font-headings" id="countdowntimer"></span>
+        <div class="{{$ctrl.userClass}} positioning" style="{{$ctrl.timerAnimation}}">
             <!-- <div class="man"></div> -->
         </div>
     </div>
@@ -16,12 +16,12 @@
         </section>
 
         <section class="available-items-container">
-            <h3 class="available-header">Available Items</h3>
+            <h3 class="available-header font-headings">Available Items</h3>
 
 
             <div class="available-items-flex">
                 <div class="available-items" ng-repeat="food in $ctrl.locationItems track by $index" ng-click="$ctrl.moveToBag($index)">
-                    <img class="hidden-for-small" class="food_img" ng-src="{{ food.img }}" style="width: 50px; height: 50px;">
+                    <img class="hidden-for-small food_img" ng-src="{{ food.img }}" style="width: 50px; height: 50px;">
                     <p class="custom-p">{{ food.food_name }}</p>
                     <!-- show on hover-->
                 </div>
@@ -31,7 +31,7 @@
         </section>
 
         <section class="bag-container">
-            <h3>Your Bag</h3>
+            <h3 class="font-headings">Your Bag</h3>
             <div class="bag-items">
 
                 <div class="bag-item-place-holder">
