--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -3,7 +3,7 @@
 <section class="prepper-body">
     <form class="prepper_form" ng-submit="$ctrl.calsPerDay();">
         
-        <h5 class="stat_header">Enter in your character stats</h5>
+        <h5 class="stat_header font-headings">Enter in your character stats</h5>
 
         <div class="male_female">
 
