--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -71,14 +71,15 @@ ng-view {
 /*About Popup*/
 .popup {
   width: 300px;
-  background-color: red;
-  height: 300px;
+  background-color: rgba(46, 42, 42, .95);
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 1rem;
-}
+  border-radius: 5px;
+  z-index: 1000;
+}  
 
 .close {
   position: absolute;
@@ -104,26 +105,12 @@ ng-view {
     margin-top: 20px
   }
 
-
-
-
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none;
   -moz-appearance: none;
   margin: 0; 
 }
-
-
-/******* Running Timer *******/
-/* .running-timer {
-  background : url(../img/running_man8.png);  
-  width: 128px;
-  height: 150px;
-  animation: walk-east 1s steps(8) infinite,
-              forward 10s linear infinite;
-} */
-
 
  /************************************************************** For Tablet */
  @media only screen and (min-width: 600px){
