--- a/app/css/locations.css
+++ b/app/css/locations.css
@@ -19,6 +19,7 @@ nav {
     height: 30vh;
     background-size: auto 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .positioning {
@@ -158,7 +159,7 @@ nav {
   
   @keyframes forward {
     from { transform: translateX(0%); }  
-    to { transform: translateX(100%); }
+    to { transform: translateX(90vw); }
   }
 
   @keyframes scroll-city {
