--- a/app/css/story.css
+++ b/app/css/story.css
@@ -4,7 +4,7 @@
 }
 
 .story-background {
-  background-image: url("../img/story-building-background-mobile.png"); 
+  background-image: url("../img/story-building-background.png"); 
   height: 100vh;
 }
 
@@ -64,7 +64,6 @@
     right: -4px;
     border-radius: 100%;
     color: black;
-    background-color: white;
     cursor: pointer;
   }
   .text {
@@ -83,10 +82,10 @@
     animation: glowing 5000ms infinite;
   }
   @keyframes glowing {
-    0% { box-shadow: 0 0 -10px #c4a300; }
-    40% { box-shadow: 0 0 20px #c4a300; }
-    60% { box-shadow: 0 0 20px #c4a300; }
-    100% { box-shadow: 0 0 -10px #c4a300; }
+    0% { text-shadow: 0 1px #c4a300; }
+    40% { text-shadow: 0 2px #c4a300; }
+    60% { text-shadow: 0 2px #c4a300; }
+    100% { text-shadow: 0 2px #c4a300; }
   }
 
   /************************************************************** For Tablet */
