--- a/app/templates/nav.template.html
+++ b/app/templates/nav.template.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand hidden-for-small" ng-click="$ctrl.resetGame();" href="/#!">
-      <img src="img/logofull.png" width="100%" height="50px" class="d-inline-block align-top nav-logo" alt="">
+      <img src="../img/logofull.png" width="100%" height="50px" class="d-inline-block align-top nav-logo" alt="">
     </a>
     <a class="navbar-brand hidden-for-large" ng-click="$ctrl.resetGame();" href="/#!">
-        <img src="img/logo.png" width="40" height="40" class="d-inline-block align-top nav-logo" >
-       </a>
+      <img src="../img/LightningBoltLogo.png" width="40" height="40" class="d-inline-block align-top nav-logo" >
+    </a>
 
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
