--- a/app/css/end.css
+++ b/app/css/end.css
@@ -9,20 +9,47 @@ nav {
   min-height: 10vh;
 }
 
+.end-heading {
+  padding-top: 20px;
+}
 .end-container {
-  background: url("/img/street02_preview_mobile.png");
-  background-repeat: repeat-x;
-  height: 30vh;
+  background: url("../img/end-full.png");
+  background-repeat: repeat-x;  
   background-size: auto 100%;
+  height: 100vh;
+  padding: 0 5px;
 }
 
-.final_container {
-  min-height: 30vh;
+.jumping-female {
+  background: url("../img/sprites/girl_jump_mobile_120.png");
+  width: 120px;
+  height: 120px;
+  animation: jumping-female .75s steps(10) infinite;
+  margin: auto;
+}
+.jumping-male {
+  background: url("../img/sprites/boy_jump_120px.png");
+  width: 120px;
+  height: 120px;
+  animation: jumping-male .75s steps(6) infinite;
+  margin: auto;
+  
+}
+
+@keyframes jumping-female {
+  100% { background-position: -1200px; }
+}
+@keyframes jumping-male {
+  100% { background-position: -720px; }
+}
+
+.final_container {  
   width: 100%;
   padding: 5px;
-  background-color: #555555;
-  color: rgb(173, 171, 171);
-  border-top: #2e2e2e 1px solid;
+  background-color: #5555559a;
+  color: white;  
+  border: 1px solid #555555;
+  border-radius: 5px;
 }
 
 .final-items {
@@ -30,7 +57,7 @@ nav {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid rgb(175, 174, 174);
+  border: 1px solid rgb(179, 175, 175);
   margin: 3px;
   padding: 3px;
   border-radius: 5px;
@@ -42,12 +69,15 @@ border-radius: 50%;
 }
 
 .final-numbers {
-  color: black;
+  color: white;
 }
 
     /************************************************************** For Tablet */
 @media only screen and (min-width: 600px){
-   
+  .final_container {  
+    width: 60%;
+    margin: auto;
+  }
   }
   
   
