--- a/app/templates/end.template.html
+++ b/app/templates/end.template.html
@@ -1,8 +1,17 @@
 <nav-component></nav-component>
 <section class="end-container">
-<h3>The End?</h3>
+<h3 class="end-heading">The End?</h3>
 <p>Although you struggled with your directions, you eventually make it to Adam's Hidden Bunker.  Your journey has ended... for now.</p>
 <!-- With your remaining rations, you use the secret knock on his door, and moments later, he opens the hatch to your relief. -->
+
+<div class="jumping-female" ng-show="$ctrl.sex === 'female'"></div>
+<div class="jumping-male" ng-show="$ctrl.sex === 'male'"></div>
+
+<section class="final-numbers">
+        <p>You have collected {{ $ctrl.totalCal }} calories.</p>
+        <!-- add an addtional 3 weeks after they are out of calorie--> 
+        <p>The calories you collected can sustain you for {{ $ctrl.totalDays + 21 }} days, assuming the worst has passed.</p> 
+    </section>
 
 <h4 class="final-bag"> In your bug out bag:</h4>
 <div class="final_container">
@@ -13,10 +22,6 @@
     </div>
 </div>
 
-<section class="final-numbers">
-    <p>You have collected {{ $ctrl.totalCal }} calories.</p>
-    <!-- add an addtional 3 weeks after they are out of calorie--> 
-    <p>The calories you collected can sustain you for {{ $ctrl.totalDays + 21 }} days, assuming the worst hasn't passed.</p> 
-</section>
+
 </section>
  
