Added ngAnimate and small changes to story route

--- a/app/templates/story.template.html
+++ b/app/templates/story.template.html
@@ -1,7 +1,7 @@
 <section class="story-background">
     <div class="talk-bubble bubble">
         <div class="talktext">
-            <p class="text"></p>
+            <p class="text">{{$ctrl.message[$ctrl.counter].message}}</p>
             <i class="material-icons click button-glow" ng-click="$ctrl.nextPage();">forward</i>
         </div>
     </div>
