Added button styling

--- a/app/templates/landing-page.template.html
+++ b/app/templates/landing-page.template.html
@@ -4,8 +4,8 @@
             <img class="top_logo glow secondary-glow fade-in" src="../img/LightningBoltLogo.png" alt="">
         </div>
         <div class="buttons">
-            <button class="button" type="button" ng-click="$ctrl.aboutGame();"><span class="button__inner">About</span></button>
-            <button class="button" type="button" ng-click="$ctrl.nextPage();"><span class="button__inner">Play</span></button>
+            <button class="fuller-button white" type="button" ng-click="$ctrl.aboutGame();"><span class="button__inner">About</span></button>
+            <button class="fuller-button white" type="button" ng-click="$ctrl.nextPage();"><span class="button__inner">Play</span></button>
         </div>
     </section>
 
