--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -23,7 +23,7 @@
                 </label> 
             </div>
         </div>
-        <h5>Enter Stats</h5>
+        <h5 class="font-headings">Enter Stats</h5>
 
         <!--With bootstrap-->
         <div class="form-group">
