--- a/app/css/end.css
+++ b/app/css/end.css
@@ -83,5 +83,27 @@ border-radius: 50%;
   
   /*********************************************************** For Desktop */
   @media only screen and (min-width: 1000px){
-  
+    .jumping-female {
+      background: url("../img/sprites/girl_jump_300.png");
+      width: 512px;
+      height: 512px;
+      animation: jumping-female .75s steps(10) infinite;
+      margin: auto;
+    }
+    .jumping-male {
+      background: url("../img/sprites/boy_jump_600px.png");
+      width: 600px;
+      height: 600px;
+      animation: jumping-male .75s steps(6) infinite;
+      margin: auto;
+      
+    }
+    
+    @keyframes jumping-female {
+      100% { background-position: -5120px; }
+    }
+    @keyframes jumping-male {
+      100% { background-position: -3600px; }
+    }
+    
   }
