--- a/app/css/locations.css
+++ b/app/css/locations.css
@@ -36,8 +36,7 @@ nav {
     width: 100%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-wrap: wrap;  
     align-items: center;    
     background-color: #555555;
     color: white;    
@@ -45,8 +44,7 @@ nav {
 
 .available-items-flex {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-wrap: wrap;   
     width: 100%;
 }
     
@@ -81,14 +79,6 @@ nav {
     display: none;
 }
 
-.custom-p {
-    width: 100%;
-    height: 50px;
-    padding: 5px;
-    display: inline-block;
-    text-align: center;
-}
-
 .bag-container {
     min-height: 30vh;
     width: 100%;
@@ -113,7 +103,7 @@ nav {
     padding-bottom: 25px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;   
     border: #777777 1px solid;
     border-radius: 5px;
     cursor: url("img/remove-item.png"), auto;
@@ -123,11 +113,6 @@ nav {
     width: 50%;
 }
 
-.food_img {
-    border-radius: 100%;
-    background: white;
-    
-}
 
 .male {
     background: url("../img/sprites/male_run.png");
@@ -192,23 +177,19 @@ nav {
     }   
     .available-items-container {        
         width: 40%; 
-        padding: 25px;
-      
-    }
-    .available-header {
-        margin-top: -25px;
-
-    }
+        padding: 25px;      
+    }   
 
     .available-items-flex {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
-    .available-items {
-        width: 30%;   
-        padding: 3px;      
-        border: none;
-        margin: 5px;
+   
+    .available-food-img {
+        width: 50px;
+        height: 50px;
+        margin-top: 8px;
     }
     .hidden-for-small {
         display: block;
@@ -223,10 +204,20 @@ nav {
     .bag-item-place-holder {
         height: 100px;
         width: 100px;
-        display: flex;
-        flex-wrap: wrap;
+        display: flex;        
         cursor: url("img/remove-items-lg.png"), auto;
+        flex-direction: column;
     }
+
+  .available-items {
+    width: 100px;
+    height: 100px;    
+    display: flex;
+    align-items: center;   
+    border: #777777 1px solid;
+    border-radius: 5px;    
+    flex-direction: column;
+  }  
 }
 
 @media only screen and (min-width: 1000px) {
