--- a/app/templates/locations.template.html
+++ b/app/templates/locations.template.html
@@ -1,6 +1,7 @@
 <nav-component></nav-component>
 
 <section class="locations-body">
+
     <div class="main">
         <span class="countdown-timer" id="countdowntimer"></span>
         <div class="{{$ctrl.userClass}} positioning" style="{{$ctrl.timerAnimation}}"></div>
@@ -14,13 +15,12 @@
         </section>
 
         <section class="available-items-container">
-            <h3 class="available-header font-headings">Available Items</h3>
-
+            <h3 class="font-headings">Available Items</h3>
 
             <div class="available-items-flex">
                 <div class="available-items" ng-repeat="food in $ctrl.locationItems track by $index" ng-click="$ctrl.moveToBag($index)">
-                    <img class="hidden-for-small food_img" ng-src="{{ food.img }}" style="width: 50px; height: 50px;">
-                    <p class="custom-p">{{ food.food_name }}</p>
+                    <img class="hidden-for-small available-food-img" ng-src="{{ food.img }}">
+                    <p class="available-food-text">{{ food.food_name }}</p>
                     <!-- show on hover-->
                 </div>
             </div>
@@ -28,8 +28,10 @@
             <button class="btn btn-danger btn-block margin5 percent80" ng-click="$ctrl.moveToNextLocation();">Bug Out!</button>
         </section>
 
+<!-- Bag items Start-->
         <section class="bag-container">
             <h3 class="font-headings">Your Bag</h3>
+
             <div class="bag-items">
 
                 <div class="bag-item-place-holder">
@@ -63,38 +65,10 @@
                     <p class="hidden-for-small" ng-show="$ctrl.bagItems.length > 5">{{ $ctrl.bagItems[5].food_name }}</p>
                 </div>
 
-                    <!-- version 1 of location template -->
-                    <!-- <nav-component timeout="$ctrl.pageTimeout"></nav-component>
-<h1>{{ $ctrl.currentLocation[$ctrl.counter].name }}</h1>
-<div class="center">
-    <h2>Items To Pick From</h2>
-    <section class="food-container">
-        <div class="item_box" ng-repeat="food in $ctrl.locationItems track by $index" ng-click="$ctrl.moveToBag($index)">
-            <img class="food_img" ng-src="{{ food.img }}">
-            <p>{{ food.food_name }}</p> <!-- show on hover-->
-                    <!-- </div>
-    </section>
-        
-    <h2 class="your-items-container">Your Items</h2>
-    <section class="bag-container">
-        <div class="bug-out-bag" ng-repeat="item in $ctrl.bagItems track by $index" ng-click="$ctrl.moveToLocation($index)">
-            <img class="food_img" ng-src="{{ item.img }}">
-            <p>{{ item.food_name }}</p> 
-        </div>
-    </section>
-
-</div>
-        
-<footer>
-    <div class="man_box" style="{{$ctrl.timerAnimation}}">
-        <div class="man"></div>
-    </div>
-    <button class="bug_out_btn" ng-click="$ctrl.moveToNextLocation();">Bug Out!</button>
-</footer> -->
-                </div>
-            </div>
+            </div>          
+          
 
         </section>
-
+<!-- Bag items End-->
     </section>
 </section>
