--- a/app/css/landing-page.css
+++ b/app/css/landing-page.css
@@ -98,6 +98,9 @@
   100% { background-position: 0 0; background-color: skyblue; }
 }
 
+.ng-hide {
+  width: 0px;
+}
 
 /************************************************************** For Tablet */
 @media only screen and (min-width: 600px){
@@ -129,6 +132,10 @@
 
     .bottom_logo {
       width: 50%;
+    }
+
+    .fuller-button {
+      font-size: 1rem;
     }
 
 
@@ -168,6 +175,10 @@
     .buttons {
       width: 50%;
       justify-content: space-around;
+    }
+
+    .fuller-button {
+      font-size: 1.3rem;
     }
 
   }
