--- a/app/templates/landing-page.template.html
+++ b/app/templates/landing-page.template.html
@@ -11,7 +11,7 @@
 
 
 
-    <section class="popup" ng-show="$ctrl.popup">
+    <section class="popup" id="about-popup" ng-show="$ctrl.popup">
         <img src="../img/close-x-32.png" class="close-btn" ng-click="$ctrl.close();">
         <h1 class="about-title font-headings">Doomsday Trail</h1>
         <p>Doomsday Trail is a game based on the game Oregon Trail. During an apocolypse you need to grab food items to survive. Find out how long you will survive, if it all, by playing Doomsday Trail.</p>
