More ngAnimate, fixing boxes

--- a/app/css/landing-page.css
+++ b/app/css/landing-page.css
@@ -98,12 +98,8 @@
   100% { background-position: 0 0; background-color: skyblue; }
 }
 
-#about-popup {
-  transition: all .5s;
-}
-
 .ng-hide {
-  width: 0px;
+  display: none;
 }
 
 /************************************************************** For Tablet */
